--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ nannou_laser = "0.3.0"
 nannou_audio = "0.2.0"
 nannou_osc = "0.1.0"
 rand = "0.7.0"
-num = "0.2.0"
+# num = "0.2.0"
 rstar = "0.5.1"
 image = "0.22.2"
