--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ nannou = {git = "https://github.com/nannou-org/nannou.git", branch = "master"}
 rand = "0.7.2"
 rstar = "0.5.1"
 num-complex = "0.2.3"
+image = "0.22.3"
