--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ rand = "0.7.2"
 rstar = "0.5.1"
 num-complex = "0.2.3"
 image = "0.22.3"
+
+
+[workspace]
+members = ["utils/camera", "utils/rotation"]
